--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "name": "Cine Pipoca",
   "short_name": "CinePipoca",
-  "start_url": "index.html",
+  "description": "Meu catálogo pessoal de filmes e séries",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0b101b",
-  "theme_color": "#3b82f6",
+  "theme_color": "#0b101b",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3163/3163478.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
